# MCPPlugin

./: .env.example  .gitignore  CMakeLists.txt  CPACK_USAGE.md  CPACK_USAGE_ZH.md  CPackConfig.cmake  README.md  README_ZH.md  main.cc  sample_plugin.json  test_mcp.ps1
.github/workflows/: build_and_package.yml
include/: env_manager.h  httplib.h  plugin_manager.h  plugin_repo_manager.h
include/core/: CMakeLists.txt  executable_path.h  mcpserver_api.h
include/sdk/: CMakeLists.txt  tool_info_parser.cpp  tool_info_parser.h
plugins/: CMakeLists.txt
plugins/example_plugin/: CMakeLists.txt  example_plugin.cpp  tools.json
protocol/: CMakeLists.txt
src/: env_manager.cpp  plugin_manager.cpp  plugin_repo_manager.cpp
tools/: CMakeLists.txt  plugin_ctl.cpp
